rules/ensure_network_policy_configured_in_labels/test/success_pod_ccnp_empty_selector/input/cilium_clusterwide_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cluster-baseline
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - {}
  egress:
  - toEndpoints:
    - {}
